Loja de Games - HTML

--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
     <div>
         <p>GameStop</p>
@@ -51,8 +53,15 @@
 
     </table>
 
-    <h3> Novos produtos devem chegar em preve a nossa loja, por isso, fique atentos(as)!</h3>
+    <h3>Novos produtos devem chegar em preve a nossa loja, por isso, fique atentos(as)!</h3>
     <p> Caso queira fazer alguma sugestão de algum jogo, basta entrar em contato com a nossa equipe.</p>
+
+    <h4>Está com um cliente e gostaria de ver as informações de venda dele? neste caso basta clicar em um dos links abaixo. </h4>
+
+    <div>
+            <a href="venda.html">Venda</a>
+            <a href="historico-venda.html">Histórico de Vendas</a>
+    </div>
 
 </body>
 </html>
