--- a/modulo1/html-sistema-loja/index.html
+++ b/modulo1/html-sistema-loja/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GameStop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div>
         <h1>Bem-vind@ a <em>GameStop</em>!</h1>
@@ -16,18 +19,18 @@
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a href="funcionarios.html">Funcionários</a> 
     </div>
 
     <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        <br><p1> A sua loja nacional de games com todos os preços na medida para você que curte games mas não é rico</p1>
     </div>
 
     <div>
-        <p>Siga-nos nas redes sociais!</p>
+        <br><p2>Siga-nos nas redes sociais!</p2><br>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+            <br><img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
             <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
             <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
         </div>
