--- a/modulo1/css-bugfixes/home.html
+++ b/modulo1/css-bugfixes/home.html
@@ -14,12 +14,12 @@
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
             <ol>
+            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
                 <li> Ache os melhores descontos </li>
-                <li> Busque pelos seus gostos</li>
+                <li> Busque pelos seus gostos</li> <br>
+                <h3> Realize seus sonhos conosco</h3>
             </ol>
-            <h3> Realize seus sonhos conosco</h3>
         </div>
 
         <div class="container" id="container-para-comprar">
