--- a/modulo1/css-bugfixes/home.html
+++ b/modulo1/css-bugfixes/home.html
@@ -15,7 +15,7 @@
     <div>
         <div class="container" id="container-de-descricao">
             <ol>
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p> <br>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li> <br>
                 <h3> Realize seus sonhos conosco</h3>
