Ajeitando o tamanho das imagens na parte de css, definindo um tamanho padrão para elas e tirando o fundo preto que foi definido para uma das imagens

--- a/modulo1/css-bugfixes/home.html
+++ b/modulo1/css-bugfixes/home.html
@@ -15,7 +15,7 @@
     <div>
         <div class="container" id="container-de-descricao">
             <ol>
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p> <br>
+                <p> Somos uma empresa focada <br> em tornar a compra de <br> roupas mais fácil </p> <br>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li> <br>
                 <h3> Realize seus sonhos conosco</h3>
@@ -23,7 +23,8 @@
         </div>
 
         <div class="container" id="container-para-comprar">
-            <p> BORA COMEÇAR A </p><br>
+          <br>  <p>BORA COMEÇAR A</p>
+            <div class="space"></div>
             <a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a>
         </div>
     </div>
